[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "code-down"
version = "1.1.0"
description = "A CLI tool that converts Markdown files into beautifully themed PDFs with syntax-highlighted code blocks."
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "bouajila", email = "bouajilamedyessine@gmail.com" }
]
dependencies = []
keywords = ["cli", "markdown", "pdf", "converter", "documentation"]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/bouajilaProg/CodeDown"
Repository = "https://github.com/bouajilaProg/CodeDown"
Documentation = "https://github.com/bouajilaProg/CodeDown#readme"
"Bug Tracker" = "https://github.com/bouajilaProg/CodeDown/issues"

[project.scripts]
code-down = "codedown.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
