[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "code-down"
version = "2.0.1"
description = "A CLI tool that converts Markdown files into beautifully themed PDFs with syntax-highlighted code blocks."
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "bouajila", email = "bouajilamedyessine@gmail.com" }
]
dependencies = [
    "markdown>=3.4",
    "pygments>=2.15",
    "weasyprint>=60.0",
    "typer[all]>=0.12.0",
    "click>=8.1.7,<9.0",
    "InquirerPy>=0.3",
    "watchdog>=3.0",
    "requests>=2.28",
    "tomli>=2.0; python_version < '3.11'",
]
keywords = ["cli", "markdown", "pdf", "converter", "documentation"]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/bouajilaProg/CodeDown"
Repository = "https://github.com/bouajilaProg/CodeDown"
Documentation = "https://github.com/bouajilaProg/CodeDown#readme"
"Bug Tracker" = "https://github.com/bouajilaProg/CodeDown/issues"

[project.scripts]
code-down = "codedown.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
codedown = ["assets/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
